proc-macros/tests/ui/incorrect/sub/sub_name_override.stderr
error: "one" is already defined
 --> $DIR/sub_name_override.rs:7:5
  |
7 |     fn one(&self);
  |        ^^^
